# chip8-emu

./: .gitignore  CMakeLists.txt  Makefile  README.md  clean.bat  clean.sh  opcodes.txt
src/: cpu.c  cpu.h  graphics.c  graphics.h  main.c  opcodes.h  sprites.h
